force-app/main/default/objects/LogEvent__e/LogEvent__e.object-meta.xml
<CustomObject>
    <description>Log Event</description>
    <label>LogEvent</label>
    <pluralLabel>LogsEvent</pluralLabel>
</CustomObject>