force-app/main/default/objects/LogEvent__e/fields/ApexClass__c.field-meta.xml
<CustomField>
    <fullName>ApexClass__c</fullName>
    <label>Apex Class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>