force-app/main/default/objects/LogEvent__e/fields/ApexMethod__c.field-meta.xml
<CustomField>
    <fullName>ApexMethod__c</fullName>
    <label>Apex Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>