force-app/main/default/objects/LogEvent__e/fields/APIName__c.field-meta.xml
<CustomField>
    <fullName>APIName__c</fullName>
    <label>APiName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>