force-app/main/default/objects/LogEvent__e/fields/CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>CorrelationId__c</fullName>
    <description>Correlation ID returns by the API Management System</description>
    <label>Correlation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>