force-app/main/default/objects/LogEvent__e/fields/EntityID__c.field-meta.xml
<CustomField>
    <fullName>EntityID__c</fullName>
    <label>Entity ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>