force-app/main/default/objects/LogEvent__e/fields/ExceptionType__c.field-meta.xml
<CustomField>
    <fullName>ExceptionType__c</fullName>
    <description>Exception Type</description>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>