force-app/main/default/objects/LogEvent__e/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <label>Identifier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>