force-app/main/default/objects/LogEvent__e/fields/RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId__c</fullName>
    <label>Record Type ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>