force-app/main/default/objects/LogEvent__e/fields/RequestHeader__c.field-meta.xml
<CustomField>
    <fullName>RequestHeader__c</fullName>
    <label>Request Header</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>