force-app/main/default/objects/LogEvent__e/fields/ResponseHeader__c.field-meta.xml
<CustomField>
    <fullName>ResponseHeader__c</fullName>
    <label>Response Header</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>