force-app/main/default/objects/LogEvent__e/fields/ResponseStatusCode__c.field-meta.xml
<CustomField>
    <fullName>ResponseStatusCode__c</fullName>
    <label>Response Status Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>