force-app/main/default/objects/LogEvent__e/fields/RunningUser__c.field-meta.xml
<CustomField>
    <fullName>RunningUser__c</fullName>
    <description>User ID that generates the log record</description>
    <label>Running User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>